--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="server_url">192.168.86.211:4567</string>
+    <string name="server_url">192.168.43.74:4567</string>
     <string name="token">Zm9ybmU2OTVAd3Rocy5uZXQ6ZGFyeWxlbzE=</string>
 
     <string name="title_activity_login">Sign in</string>
@@ -101,4 +101,5 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="ip_prompt">IP Address</string>
 </resources>
